[package]
name = "rf-woofer"
version = "1.0.0"
authors = ["PancakeTAS <pancake@mgnet.work>", "Zebreus <zebreus@zebre.us>"]
edition = "2021"

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"

[profile.dev]
opt-level = "z"
panic = "abort"

[dependencies]
esp-idf-svc = "0.51"
esp-idf-sys = "0.36"
esp-idf-hal = { version = "0.45", features = ["rmt-legacy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[build-dependencies]
embuild = "0.33"
